--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.18.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ms": "^2.1.3"
   }
 }
