--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "openai": "^5.9.0"
   }
 }
